fixed but where background wasnt calculating properly as heights of sections change. looking to use flex 2 1 auto to better suit inner portfolio item collapsing grid.

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -69,8 +69,8 @@
 }
 
 .icon-xs {
-    height: auto;
-    width: 7vw;
+    height: 5vh;
+    width: auto;
     fill: white;
     color: white;
 }
